# SmartContractsVaraHack2024

app/: Cargo.toml
app/src/: lib.rs
app/src/services/: service.rs
app/src/states/: state.rs
